website/src/components/gallery/ShowcaseCardPanel/styles.module.css
/**
* Copyright (c) Microsoft Corporation. All rights reserved.
* Licensed under the MIT License.
 */

/* Keep for future change on light vs dark theme */
.cardDescription {
  font-size: 14px;
  color: var(--site-color-text-muted);
}

.cardTag {
  font-size: 10px;
  color: #606060;
}

.textColor {
  color: #242424;
}

.squareColor {
  background-color: #f5f5f5;
}

.terminalSquareTopColor {
  background-color: #f5f5f5;
  border: 1px solid #e0e0e0;
}

.terminalSquareBottomColor {
  color: #ffffff;
  border: 1px solid #e0e0e0;
}

.borderBottomColor {
  border-bottom: 1px solid #d1d1d1;
}

.commandColor {
  color: #616161;
}

.color {
  color: var(--ifm-color-primary) !important;
}

.purple {
  filter: invert(27%) sepia(96%) saturate(1200%) hue-rotate(176deg)
    brightness(97%) contrast(101%) !important;
  color: black;
}

.purple:hover {
  filter: invert(22%) sepia(96%) saturate(1400%) hue-rotate(176deg)
    brightness(90%) contrast(101%) !important;
}

[data-theme="dark"] .purple {
  filter: invert(55%) sepia(60%) saturate(800%) hue-rotate(176deg)
    brightness(105%) contrast(95%) !important;
}

[data-theme="dark"] .purple:hover {
  filter: invert(22%) sepia(96%) saturate(1400%) hue-rotate(176deg)
    brightness(90%) contrast(101%) !important;
}

[data-theme="dark"] .commandColor {
  color: #ffffff;
}

[data-theme="dark"] .borderBottomColor {
  border-bottom: 1px solid #666666;
}

[data-theme="dark"] .cardTag {
  color: #adadad;
}

[data-theme="dark"] .textColor {
  color: #FFFFFF;
}

[data-theme="dark"] .squareColor {
  background-color: #141414;
}

[data-theme="dark"] .terminalSquareTopColor {
  background-color: #404040;
  border: 1px solid #3d3d3d;
}

[data-theme="dark"] .terminalSquareBottomColor {
  background-color: #2f2f2f;
  border: 1px solid #3d3d3d;
}

